# cpp_playground

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  playground.cxx
include/math/: Matrix.hpp  factorial.hpp  frequency.hpp  matrix.hpp
src/: CMakeLists.txt  lib0.cpp
src/math/: CMakeLists.txt  Matrix.cpp  Matrix.cxx  factorial.cxx  frequency.cpp  matrix.cpp
tests/: CMakeLists.txt  test_factorial.cpp  test_library.cpp  test_library.cxx  test_matrix.cpp
