ENABLE_TESTING()
ADD_EXECUTABLE(test_library test_library.cxx)
ADD_TEST(NAME testlibtest COMMAND test_library)
TARGET_INCLUDE_DIRECTORIES(test_library PUBLIC ${Playground_SOURCE_DIR}/include/math)
#SOURCE_GROUP(TREE "${Playground_SOURCE_DIR}/include/math" PREFIX "Header Files" FILES ${HEADER_LIST_MATH})
